# tt

./: .gitmodules
app/calculate/: .gitignore  CMakeLists.txt  bufsize.c  getop.c  main.c  push_pop.c
app/shader/: CMakeLists.txt
app/shader/res/shaders/: Basic.shader
app/shader/src/: CMakeLists.txt  main.cpp
app/test_commit/: k.txt  yr.txt
